tests/ui/lazy-type-alias-impl-trait/branches.stderr
error[E0277]: a value of type `Bar` cannot be built from an iterator over elements of type `_`
  --> $DIR/branches.rs:17:28
   |
LL |         std::iter::empty().collect()
   |                            ^^^^^^^ value of type `Bar` cannot be built from `std::iter::Iterator<Item=_>`
   |
   = help: the trait `FromIterator<_>` is not implemented for `Bar`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
